--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zdobbs_palindrome",
+  "name": "@flaskfullofcoffee/palindrome",
   "version": "1.0.0",
   "description": "Palindrome detector",
   "main": "index.js",
